<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        tools:context=".Details">

        <TextView
            android:id="@+id/resultado_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="148dp"
            android:gravity="center_horizontal"
            android:text="@string/zero_double"
            android:textSize="96sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo" />

        <TextView
            android:id="@+id/resultado_visitante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:gravity="center_horizontal"
            android:text="@string/zero_double"
            android:textSize="96sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guion" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_visitor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultado_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guion" />

        <TextView
            android:id="@+id/guion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textSize="96sp"
            app:layout_constraintEnd_toStartOf="@+id/resultado_visitante"
            app:layout_constraintStart_toEndOf="@+id/resultado_local"
            app:layout_constraintTop_toTopOf="@+id/resultado_local" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>